# raylibGamePhysicsEngine

./: .gitignore  CMakeLists.txt  DOCS.md  README.md  test_collider_scaling.md  test_scaling.md  test_spawn.cpp
include/core/: GameObject.h  engine.h
include/physics/: PhysicsWorld.h
include/rendering/: Renderer.h
include/ui/: DebugUI.h  PhysicsUI.h
src/physics/: PhysicsWorld.cpp
src/rendering/: Renderer.cpp
src/setup/: main.cpp
src/setup/core/: GameObject.cpp  engine.cpp
src/ui/: DebugUI.cpp  PhysicsUI.cpp
